Enhance sonar-project.properties with improved comments and organization

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,36 @@
+/*
+ *  Copyright MFB Technologies, Inc.
+ */
+
 sonar.projectKey=oss-mfbtech_mfbtech-changelog-generator
 sonar.organization=oss-mfbtech
 
-# This is the name and version displayed in the SonarCloud UI.
+# Display name (kept in sync with package.json "name")
 sonar.projectName=@mfbtech/changelog-generator
-#sonar.projectVersion=1.0
+sonar.projectVersion=1.0.1
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+# Relative paths to sources (only production code). Jest tests live under __tests__ and are excluded below.
 sonar.sources=src
-sonar.exclusions=**/__tests__/**/*,**/__mocks__/**/*
 
-# Encoding of the source code. Default is default system encoding
+# Exclude test, mock, and generated build output. (Rollup builds to out/ but we only analyze TS sources.)
+sonar.exclusions=**/__tests__/**/*,**/__mocks__/**/*,out/**/*
+
+# Encoding (explicit for portability)
 sonar.sourceEncoding=UTF-8
 
-# Test coverage path (https://docs.sonarcloud.io/enriching/test-coverage/javascript-typescript-test-coverage/)
+# Coverage report produced by: npm run test:ci (jest --collectCoverage) -> default lcov path
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
+
+# Optional: Narrow down file suffixes if needed (Sonar auto-detects TS/JS). Left commented for now.
+# sonar.typescript.file.suffixes=.ts,.tsx
+
+# PR / Branch analysis (values auto-provided by GitHub Action environment; no need to set manually):
+# sonar.pullrequest.provider=GitHub
+# sonar.pullrequest.github.repository=MFB-Technologies-Inc/changelog-generator
+
+# Housekeeping: reduce noise from config or meta files (still appear in repo but not analyzed for code smells)
+sonar.exclusions=**/__tests__/**/*,**/__mocks__/**/*,out/**/*
+sonar.test.exclusions=**/__tests__/**/*,**/__mocks__/**/*
+
+# (If you later add integration tests with coverage, ensure they also feed into lcov.info or add another path.)
